Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-11119

Qt Creator 3.0 crashed in UI Designer mode when performing Undo on Mac OS X 10.9 after Reloading externally modified file

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • Not Evaluated
    • None
    • Qt Creator 3.0.0
    • Widget Designer
    • None
    • Mac OS X 10.9
    • 2bb268a8866e8649006aa1d145797cca8e02e009 (qttools 5.2.1 stable 18.12.2013)

    Description

      A crash report is attached. Only happened once, couldn't find specific sequence of steps to reproduce.

      Attachments

        1. crash.txt
          69 kB
        2. crash2.txt
          70 kB
        For Gerrit Dashboard: QTCREATORBUG-11119
        # Subject Branch Project Status CR V

        Activity

          People

            kleint Friedemann Kleint
            violetgiraffe Alex
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes