Qt Designer: Clear undo stack when reloading form.

Task-number: QTCREATORBUG-11119
Change-Id: I4ad9a4ac16f17fec292264896b82f881a4ca5a7d
Reviewed-by: Jarek Kobus <jaroslaw.kobus@digia.com>